[package]
name = "cdumay_json"
version = "0.1.0"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for JSON"
documentation = "https://docs.rs/cdumay_json"
homepage = "https://github.com/cdumay/cdumay_json"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_json"

[dependencies]
serde_json = "1.0"
cdumay_core = "0.1"
serde-value = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
